<resources>

    <string name="app_name">app-client</string>

    <!-- login -->
    <string name="input_account">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_again">请再次输入密码以确认</string>
    <string name="remember_passwprd">记住密码</string>
    <string name="login">登陆</string>
    <string name="login_success">登陆成功！</string>
    <string name="login_failed">登陆失败！</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">新用户点击注册</string>
    
    <!-- person info -->
    <string name="name">姓名</string>
    <string name="input_name">请输入您的姓名</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="major">学部</string>
    <string name="grade">年级</string>
    <string name="phone">手机</string>
    <string name="input_phone">请输入您的手机号码</string>
    <string name="QQ">QQ</string>
    <string name="input_QQ">请输入您的QQ号码</string>
    <string name="complete">完成</string>

    <!-- main -->
    <string name="home_page">主页</string>
    <string name="ongoing">进行中</string>
    <string name="find">发现</string>
    <string name="mine">我的</string>
    <string name="press_twice_exit">再按一次退出程序</string>
    <string name="search_book">请在这里输入想要搜索的书籍</string>
    <string name="i_search_book">搜书</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="warnning_nonet">当前网络不可用，请检查你的网络设置</string>

    <!-- home -->
    <string name="requst_book">求书</string>
    <string name="sell_book">卖书</string>
    <string name="teaching_book">教材</string>
    <string name="goabroad_book">出国</string>
    <string name="examfpg_book">考研</string>
    <string name="others">其他</string>
    <string name="specialty_hotbook">专业热门</string>
    
    <!-- request book -->
    <string name="requst_book_list">求书列表</string>
    <string name="book_name">书名</string>
    <string name="book_name_input">请输入书名</string>
    <string name="book_desc">描述</string>
    <string name="book_desc_single">一句话描述你的书籍</string>
    <string name="classify">分类</string>
    <string name="repay">回报</string>
    <string name="repay_single">一句话描述你的报酬</string>
    <string name="try_repay">小提示：试试创意回报(一杯奶茶、一个灌饼 ~~)</string>
    
    <!-- sell book -->
    <string name="price">价格</string>
    <string name="price_single">一句话描述你的价格</string>
    <string name="try_price">小提示：试试创意价格(一杯奶茶、一个灌饼 ~~)</string>
	
	<!-- find -->
    <string name="findtitle_text">发现惊喜</string>
    <string name="quickly_catch">快速抢单</string>
    <string name="guess_you_like">猜你喜欢</string>

    <!-- mine -->
    <string name="my_order">我的订单</string>
    <string name="my_bookstore">我的书店</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_book_friends">我的书友</string>
    <string name="my_message">我的消息</string>
    <string name="my_settings">我的设置</string>
    <string name="minetitle_text">我的书屋</string>
    <string name="user_name">还木有名字哦</string>
    
    <!-- requestbook -->
    <string name="i_request_book">我要求书</string>

    <!-- PullToRefresh -->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="is_refreshing">正在刷新...</string>
    <string name="last_refresh_time">上次刷新时间</string>
    <string name="touch_to_load">点击加载更多</string>
    <string name="is_loading">正在加载更多...</string>
    
    <!-- spinner -->
    <string-array name="major_group">
        <item>运载工程与力学学部</item>
        <item>化工与环境生命学部</item>
        <item>管理与经济学部</item>
        <item>外国语学院</item>
        <item>建设工程学部</item>
        <item>机械工程与材料能源学部</item>
        <item>建筑与艺术学院</item>
        <item>电子信息与电气工程学部</item>
        <item>物理与光电工程学院</item>
        <item>人文与社会科学学部</item>
        <item>创新实验学院</item>
        <item>数学科学学院</item>
    </string-array>
    
    <string-array name="grade_group">
        <item>大一</item>
        <item>大二</item>
        <item>大三</item>
        <item>大四</item>
    </string-array>
    
    <string-array name="book_classify_group">
        <item>教材</item>
        <item>考研</item>
        <item>出国</item>
        <item>其他</item>
    </string-array>
    
    
    <string-array name="teaching_book_classify">
        <item>学科分类</item>
        <item>公共必修</item>
        <item>化环</item>
        <item>电信</item>
        <item>建工</item>
        <item>运载</item>
        <item>机械</item>
        <item>管经</item>
        <item>人文</item>
        <item>建艺</item>
        <item>外语</item>
        <item>数学</item>
        <item>物理</item>
        <item>国教</item>
    </string-array>
    
    <string-array name="examfpg_book_base_classify">
        <item>基础课</item>
        <item>英语</item>
        <item>政治</item>
        <item>数学</item>
    </string-array>
    
    <string-array name="examfpg_book_major_classify">
        <item>专业课</item>
        <item>化环</item>
        <item>电信</item>
        <item>建工</item>
        <item>运载</item>
        <item>机械</item>
        <item>管经</item>
        <item>人文</item>
        <item>建艺</item>
        <item>外语</item>
        <item>数学</item>
        <item>物理</item>
        <item>国教</item>
    </string-array>
    
</resources>