<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_launcher" />
    
    
    <EditText
        android:id="@+id/accountText"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/logo"
        android:background="@drawable/edittext_login"
        android:hint="@string/input_account"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:maxLength="9" />
    
    <EditText
        android:id="@+id/passwordText"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/accountText"
        android:background="@drawable/edittext_login"
        android:hint="@string/input_password"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:maxLength="15"
        android:inputType="textPassword" />
    
    <CheckBox
        android:id="@+id/isRemembered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordText"
        android:text="@string/remember_passwprd" />
    
    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/isRemembered"
        android:layout_margin="15dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/button_selected_blue"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/whitecolor"
        android:textSize="17sp" />
    
    <TextView
        android:id="@+id/forgetPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp"
        android:textSize="13sp"
        android:text="@string/forget_password" />
    
    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:textSize="13sp"
        android:text="@string/register" />
    

</RelativeLayout>
