<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <com.app.base.BaseHomeButton
                    android:id="@+id/requestBookButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/btn_circle_radius"
                    android:text="@string/requst_book"
                    android:textSize="24sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <com.app.base.BaseHomeButton
                    android:id="@+id/sellBookButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/btn_circle_radius"
                    android:text="@string/sell_book"
                    android:textSize="24sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <com.app.base.BaseHomeButton
                android:id="@+id/teachingBookButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_circle"
                android:text="@string/teaching_book"
                android:textSize="25sp" />
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <com.app.base.BaseHomeButton
                android:id="@+id/goabroadBookButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_circle"
                android:text="@string/goabroad_book"
                android:textSize="25sp" />
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <com.app.base.BaseHomeButton
                android:id="@+id/examfpgBookButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_circle"
                android:text="@string/examfpg_book"
                android:textSize="25sp" />
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" />
            
            <com.app.base.BaseHomeButton
                android:id="@+id/othersButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_circle"
                android:text="@string/others"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>