<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/minePic"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:background="@drawable/pic_mine_background" >

            <ImageView
                android:id="@+id/head_defalut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/pic_mine_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/head_defalut"
                android:layout_centerHorizontal="true"
                android:text="@string/user_name"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="300dp" >

            <TextView
                android:id="@+id/centerPoint"
                android:layout_width="1px"
                android:layout_height="1px"
                android:layout_centerInParent="true"
                android:background="#000000" />

            <com.app.base.BaseHomeButton
                android:id="@+id/myOrder"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_above="@+id/centerPoint"
                android:layout_toLeftOf="@+id/centerPoint"
                android:background="@drawable/btn_circle_left_top"
                android:text="@string/my_order" />

            <com.app.base.BaseHomeButton
                android:id="@+id/myBookStore"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_above="@+id/centerPoint"
                android:layout_toRightOf="@+id/centerPoint"
                android:background="@drawable/btn_circle_right_top"
                android:text="@string/my_bookstore" />

            <com.app.base.BaseHomeButton
                android:id="@+id/myCollection"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/centerPoint"
                android:layout_toLeftOf="@+id/centerPoint"
                android:background="@drawable/btn_circle_left_bottom"
                android:text="@string/my_collection" />

            <com.app.base.BaseHomeButton
                android:id="@+id/mySettings"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/centerPoint"
                android:layout_toRightOf="@+id/centerPoint"
                android:background="@drawable/btn_circle_right_bottom"
                android:text="@string/my_settings" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>