<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/whitecolor" >

    <com.app.ui.TitleLayout
        android:id="@+id/mainTitleLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </com.app.ui.TitleLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/mLine"
        android:layout_below="@+id/mainTitleLayout"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/netWarningLayout"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@color/warningbarcolor"
            android:orientation="horizontal"
            android:paddingEnd="10dp"
            android:paddingStart="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/warnning_nonet"
                android:textColor="@color/blackcolor"
                android:textSize="14sp"
                android:drawableLeft="@drawable/pic_warning"
                android:drawablePadding="10dp"/>
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/pic_doubleright"
                android:layout_marginLeft="40dp" />
        </LinearLayout>

        <com.app.base.BaseViewPager
            android:id="@+id/viewPager"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </com.app.base.BaseViewPager>
    </LinearLayout>

    <TextView
        android:id="@+id/mLine"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_above="@+id/bottomNavigation"
        android:background="@color/stokecolor" />

    <LinearLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="5dp" >

        <LinearLayout
            android:id="@+id/homePageLayout"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/homeImage"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/homeText"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/home_page"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/onGoingPageLayout"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/onGoingImage"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/onGoingText"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/ongoing"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/findPageLayout"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/findImage"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/findText"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/find"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/minePageLayout"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/mineImage"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/mineText"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/mine"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>