<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/whitecolor"
    android:orientation="vertical" >

    <com.app.base.BaseTitleLayout
        android:id="@+id/homeTitleLayout"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="@color/titlebar_blue" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/findtitle_text"
            android:textSize="17sp" >
        </TextView>
    </com.app.base.BaseTitleLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="140dp" >

        <android.support.v4.view.ViewPager
            android:id="@+id/vp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_gravity="bottom"
            android:background="#33000000"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:gravity="center" >

                <View
                    android:id="@+id/v_dot0"
                    style="@style/dot_style"
                    android:background="@drawable/dot_focused" />

                <View
                    android:id="@+id/v_dot1"
                    style="@style/dot_style" />

                <View
                    android:id="@+id/v_dot2"
                    style="@style/dot_style" />

                <View
                    android:id="@+id/v_dot3"
                    style="@style/dot_style" />

                <View
                    android:id="@+id/v_dot4"
                    style="@style/dot_style" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp" >

        <TextView
            android:id="@+id/find_quick_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/yellow_module"
            android:gravity="center"
            android:text="@string/quickly_catch"
            android:textSize="17sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/whitecolor" />

        <TextView
            android:id="@+id/find_guess_you_like"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_module"
            android:gravity="center"
            android:text="@string/guess_you_like"
            android:textSize="17sp" />
    </LinearLayout>

    <com.app.base.BaseViewPager
        android:id="@+id/vp2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </com.app.base.BaseViewPager>

</LinearLayout>